[package]
name = "signalfd"
version = "0.1.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = 'thin'

[dependencies]
libc = "0.2"
# For mod process, SignalFd
tokio = { version = "1.7.1", features = ["net", "rt"] }
# For mod SignalFd
waitmap = "1.1.0"
