[package]
name = "async_linux_spec_fd"
version = "0.1.1"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
edition = "2018"

license-file = "LICENSE"
description = "asynchronous linux specific fd in rust."
repository = "https://github.com/NobodyXu/async-linux-spec-fd"

keywords = ["async", "linux", "tokio"]
categories = ["asynchronous", "os::linux-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = 'thin'

[dependencies]
libc = "0.2"
tokio = { version = "1.7.1", features = ["net", "rt", "macros"] }
arrayvec = "0.7.1"
num_enum = "0.5.2"
